--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Site para Aluguel de carro</h1>
     </header>
-    <section>
+    <section class="resev">
         <p>Reserve seu carro</p>
         <label for="ini">inicio
             <input type="date" name="inicio" id="inic">
@@ -23,5 +23,10 @@
         </label>
         <button type="submit">Procurar Veículo</button>
     </section>
+    <article>
+        <div class="cardisp">
+            <h1>Carros disponíveis</h1>
+        </div>
+    </article>
 </body>
 </html>
